# win-audio-session-controller

./: CMakeLists.txt  README.md
include/wincrowd/audio_session_controller/: audio_session_controller.h
source/: audio_session_controller.cpp  main.cpp
